불필요 파일 수정

--- a/index.html
+++ b/index.html
@@ -64,12 +64,9 @@ layout: default
 
   <!-- Three -->
 	<div class="page three">
-    <div class="tit">퍼블리셔 정의는 무엇일까요?</div>
-    <div class="txt-wrap">
-      <div>HTML / CSS 코더</div>
-      <div>Javascript 사용이 가능해야한다</div>
-      
-    </div>
+    <div class="tit">여기서부터는 PPT 발표</div>
+    <div class="txt-wrap text-center">
+      <div style="font-size: 40px;">시간이 많이 소요됨</div>
   </div>
   <!-- /Three -->
 </div>
