feat: archive를 위한 assets 수정

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 
   <!-- Second -->
 	<div class="page second">
-    <div class="tit">Who is Me</div>
+    <div class="tit">자기소개</div>
     <div class="wrap_list">
       <ul>
         <li>
